plugins {
	id 'java'
	id 'maven-publish'
  id 'org.springframework.boot' version '4.0.0'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.cloud.contract' version '5.0.0'
  id 'org.asciidoctor.jvm.convert' version '4.0.5'
	id 'jacoco'
}

group = 'com.eskcti.algashop'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

publishing {
	publications {
		maven(MavenPublication) {
			artifact bootJar
			artifact verifierStubsJar
		}
	}
}

ext {
	set('springCloudVersion', "2025.1.0")
	set('snippetsDir', file("build/generated-snippets"))
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	asciidoctorExt
  mockitoAgent {transitive = false}
}


dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-webmvc'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-cache'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.modelmapper:modelmapper:3.2.6'
  implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.1'
  implementation 'org.apache.commons:commons-lang3:3.20.0'
  implementation 'commons-io:commons-io:2.21.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
  testCompileOnly 'org.projectlombok:lombok'
  testAnnotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
  testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
  testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
  testImplementation 'io.rest-assured:rest-assured:6.0.1'
  testImplementation 'io.rest-assured:spring-mock-mvc:6.0.1'
  testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
  testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
  testImplementation 'org.testcontainers:testcontainers-mongodb'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
  mockitoAgent 'org.mockito:mockito-core'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

bootRun {
	args = ['--spring.profiles.active=development']
}

contracts {
	packageWithBaseClasses = "com.eskcti.algashop.product.catalog.contract.base"
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

tasks.named('contractTest') {
	outputs.dir snippetsDir
	useJUnitPlatform()
	shouldRunAfter test
	finalizedBy jacocoTestReport
}

tasks.named('check') {
	dependsOn(test, contractTest, integrationTest)
}

test {
    filter {
        excludeTestsMatching("*IT")
    }
    jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.register('integrationTest', Test) {
    description = 'Run integration tests.'
    group = 'verification'
    jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    shouldRunAfter test

    useJUnitPlatform()

    testLogging {
        events "passed"
    }

    filter {
        includeTestsMatching "*IT"
        excludeTestsMatching "*Test"
    }
}

def jacocoCoverageExcludes = [
	'**/ProductCatalogApplication.class',
	'**/ResourceNotFoundException.class',
	'**/AsyncConfig.class',
	'**/StockUpdateFailed.class',
	"**/FixedLocaleConfig.class",
	"**/ApplicationMessagePublisherConfig.class",
	"**/RedisCacheConfig.class",
	"**/ResilienceCacheErrorHandler.class",
	"**/CustomRedisCacheHealthIndicator.class"
]

jacocoTestReport {
	dependsOn test, contractTest
	executionData(test, contractTest, integrationTest)
	reports {
		xml.required = true
		html.required = true
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoCoverageExcludes)
		}))
	}
}

jacocoTestCoverageVerification {
	dependsOn test, contractTest, integrationTest
	executionData(test, contractTest, integrationTest)
	violationRules {
		rule {
			limit {
				minimum = 1.0
			}
		}
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoCoverageExcludes)
		}))
	}
}

asciidoctor {
  configurations 'asciidoctorExt'
	dependsOn contractTest
	inputs.dir snippetsDir
	attributes 'snippets' : snippetsDir
	sources {
		include 'index.adoc'
	}
	baseDirFollowsSourceFile()
	outputDir = file("build/docs/asciidoc")
}

check.dependsOn jacocoTestCoverageVerification
